# Python

./: .coverage  .gitignore  test.json
aws/: pyproject.toml
aws/aws/: logging.ini  sample.py
aws/aws/s3/: check.py  get.py  manager.py  testdata.json
aws/aws/utils/: dateutil.py
aws/logs/: log.txt
aws/tests/: pytest.ini
aws/tests/s3/: test_check.py  test_get.py  test_manager.py
aws/tests/utils/: test_tateutil.py
webtool/: pyproject.toml
