[tool.poetry]
name = "aws"
version = "0.1.0"
description = ""
authors = ["kero1976 <kero1976@outlook.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.29.2"


[tool.poetry.group.dev.dependencies]
moto = "^4.2.9"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
